--- a/src/Folders/Folders.css
+++ b/src/Folders/Folders.css
@@ -1,8 +1,27 @@
+* {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: grey;
+    cursor: pointer;
+}
+
+a:visited {
+    color: purple;
+}
 
 .folders{
-    display: inline-block;
-    width: 40%;
+    display:inline-block;
+    width: 30%;
+    height:500px;
     border: 1px grey solid;
+    float: left;
 }
 
 .folder-list {
