--- a/src/Notes/Notes.css
+++ b/src/Notes/Notes.css
@@ -2,6 +2,8 @@
     display: inline-block;
     width: 59%;
     border: 1px grey solid;
+    height: 500px;
+    overflow: auto;
 }
 
 .notes-list {
