--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+* {
+    background-color:white;
+}
+
 header {
     margin-top: 0px;
-    font-size: 40px;
+    font-size: 20px;
     text-align: center;
-    border: 1px solid grey;
+    border: 3px solid grey;
     padding-top: 20px;
     padding-bottom: 20px;
 }
