--- a/src/Notes/Notes.css
+++ b/src/Notes/Notes.css
@@ -1,7 +1,8 @@
 .notes {
-    display: inline-block;
-    width: 59%;
-    border: 1px grey solid;
+    margin-top: 5px;
+    display: flex;
+    width: 60%;
+    border: 3px grey solid;
     height: 500px;
     overflow: auto;
 }
@@ -9,6 +10,13 @@
 .notes-list {
     list-style-type: none;
     padding: 40px;
+    width: 80%;
+}
+
+button {
+    width: 60px;
+    margin: auto;
+    border-radius: 4px;
 }
 
 .notes-li {
