--- a/src/NoteMain/NoteMain.css
+++ b/src/NoteMain/NoteMain.css
@@ -1,5 +1,8 @@
 .note-main {
     width:70%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 3px;
     float: right;
 }
 
@@ -13,6 +16,7 @@ li{
 }
 
 .folder-name {
-    float: left;
-    
+    display: flex;
+    border: none;
+    width: 29%;   
 }
