--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@ header {
     margin-top: 0px;
     font-size: 20px;
     text-align: center;
-    border: 3px solid grey;
+    border: 2px solid grey;
+    border-radius: 4px;
     padding-top: 20px;
     padding-bottom: 20px;
 }
