--- a/src/Folders/Folders.css
+++ b/src/Folders/Folders.css
@@ -12,20 +12,18 @@ a:visited {
     display:flex;
     width: 30%;
     height:500px;
-    border: 3px grey solid;
+    border: 2px grey solid;
+    border-radius: 4px;
     float: left;
     margin-left:5px;
     margin-right: 5px;
+    overflow: auto;
 }
 
 .folder-list {
     margin-bottom: 5px;
     margin-top: 5px;
     text-align: center;
-}
-
-.add-folder-container {
- 
 }
 
 a { 
