--- a/src/Notes/Notes.css
+++ b/src/Notes/Notes.css
@@ -1,8 +1,9 @@
 .notes {
-    margin-top: 5px;
+    margin-top:7px;
     display: flex;
     width: 60%;
-    border: 3px grey solid;
+    border: 2px grey solid;
+    border-radius: 4px;
     height: 500px;
     overflow: auto;
 }
