--- a/src/FolderFormat/FolderFormat.css
+++ b/src/FolderFormat/FolderFormat.css
@@ -2,12 +2,13 @@
     border: 1px grey solid;
     margin-top: 30px;
     border-radius: 4px;
-
+    display: flex;
+    flex-direction: column;
 }
 
 .folder-name {
     padding: 35px;
-    font-size: 20px;
+    font-size: 1em;
 }
 
 .active {
