--- a/src/Folders/Folders.css
+++ b/src/Folders/Folders.css
@@ -3,18 +3,18 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-a:visited {
-    color: purple;
+.container{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
 }
 
 .folders{
     margin-top: 5px;
     display:flex;
-    width: 30%;
     height:500px;
     border: 2px grey solid;
     border-radius: 4px;
-    float: left;
     margin-left:5px;
     margin-right: 5px;
     overflow: auto;
@@ -40,9 +40,13 @@ a:visited {
 }
 
 .fa-folder-plus { 
+    margin-top:3%;
     color:green;
     font-size: 40px;
     transition: transform .2s;
+    float: left;
+    margin-left: 30%;
+
 }
 
 .fa-folder-plus:hover {
