--- a/src/NoteAddFormat/NoteAddForm.css
+++ b/src/NoteAddFormat/NoteAddForm.css
@@ -1,10 +1,17 @@
+.add-note {
+    border: 1px solid grey;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+
 label {
     display: block;
-    padding-bottom: 15px;
-    padding-top: 15px;
+    padding-bottom: 20px;
+    padding-top: 10px;
 }
 
-textarea {
-    margin-bottom: 20px;
+input{ 
+    padding-bottom: 20px;
 }
-
